--- a/Final.html
+++ b/Final.html
@@ -636,12 +636,14 @@ fish.</p>
 </div>
 <div id="conclusion" class="section level3">
 <h3>Conclusion</h3>
-<p>In conclusion, our results indicate a nuanced and complex
-relationship between latitudinal distribution and size class in reef
-fish populations. The unexpected findings highlight the need for further
+<p>In conclusion, our results indicate a tiny and complex relationship
+between latitudinal distribution and size class in reef fish
+populations. The unexpected findings highlight the need for further
 exploration and consideration of additional ecological factors to
 comprehensively understand the dynamics influencing size class
-variations in different latitudinal ranges.</p>
+variations in different latitudinal ranges. This study encourages
+further exploration to reveal the multifaceted dynamics shaping the
+characteristics of reef fish populations.</p>
 </div>
 <div id="reference" class="section level3">
 <h3>Reference</h3>
